# voxigame

./: CMakeLists.txt  FindQGLViewer.cmake  README.markdown  README.md
documentation/: conception-fr.md  regles-fr.md
examples/: corner.vg  generic-pieces.vg  no-path.vg  non-static-no-path.vg  non-static.vg  pipe1.vg  pipe2.vg  pipe3.vg  pipe4.vg  pipe5.vg  spiral.vg  spiral2.vg
examples/patterns/: armchair.vg  bend.vg  corner.vg  corner2.vg  diagonal.vg  pipe.vg  throne.vg  tunnel.vg  turn.vg  turn2.vg
include/core/: AbstractPiece.hxx  Board.hxx  Box.hxx  Coord.hxx  Edge.hxx  Exception.hxx  Face.hxx  GenericPiece.hxx  LPiece.hxx  Pattern.hxx  Piece.hxx  PieceFactory.hxx
include/core/export/: Manual.hxx
scripts/: patternManuals.sh
src/: CMakeLists.txt  example.cpp
src/core/: Board.cxx  Board.hxx  Box.cxx  Box.hxx  CMakeLists.txt  Coord.cxx  Coord.hxx  Edge.cxx  Exception.hxx  Face.cxx  Face.hxx  GenericPiece.cxx  GenericPiece.hxx  LPiece.cxx  LPiece.hxx  Pattern.cxx  Pattern.hxx  Piece.cxx  Piece.hxx  PieceFactory.cxx  StraightPiece.cxx  StraightPiece.hxx
src/core/export/: Manual.cxx
src/frontend/: CMakeLists.txt  InteractiveBoard.cxx  InteractiveBoard.hxx  ListModelBoard.cxx  ListModelBoard.hxx  MainWindow.ui  PieceProperties.cxx  PieceProperties.hxx  Voxigame.cxx  Voxigame.hxx  about.ui  main.cxx  mainwindow.ui  voxigame.cxx  voxigame.h  voxigame.hxx
src/tests/: CMakeLists.txt  example.cpp  test1.hxx  testBoard.cxx  testBoard.hxx  testCoord.cxx  testCoord.hxx  testFaces.cxx  testFaces.hxx  testPatterns.cxx  testPatterns.hxx  testPiece.cxx  testPiece.hxx  test_classes.hxx
src/tools/: CMakeLists.txt  vg2manual.cxx  vg2pdf.cxx  vg2svg.cxx
