SET(VOXIGAME_TESTS
  testBoard
  testPiece
  testCoord
  testPatterns
)

FOREACH(FILE ${VOXIGAME_TESTS})
  SET(TEST_MOC_HDRS ${FILE}.hxx)
  QT4_WRAP_CPP(TEST_MOC_SRCS ${TEST_MOC_HDRS})
  
  ADD_EXECUTABLE(${FILE}
    ${FILE}.cxx ${TEST_MOC_SRCS}
  )
  TARGET_LINK_LIBRARIES(${FILE}
    ${VOXIGAME_CORE_LIB} ${QT_LIBRARIES} ${QT_QTTEST_LIBRARY}
  )
  ADD_TEST(${FILE} ${FILE})
ENDFOREACH(FILE)
