SET(VOXIGAME_TESTS
  testBoard
  testPiece
  testCoord
  testPatterns
  testFaces
)

FOREACH(FILE ${VOXIGAME_TESTS})
  SET(TEST_MOC_HDRS ${FILE}.hxx)
  SET(TEST_MOC_SRCS)
  QT5_GENERATE_MOC(TEST_MOC_SRCS ${TEST_MOC_HDRS})

  ADD_EXECUTABLE(${FILE}
    ${FILE}.cxx ${TEST_MOC_SRCS}
  )
  TARGET_LINK_LIBRARIES(${FILE}
    ${VOXIGAME_CORE_LIB} Qt::Widgets Qt::Core Qt::Xml Qt::Test ${QT_QTTEST_LIBRARY} 
  )
  TARGET_COMPILE_OPTIONS(${VOXIGAME_CORE_LIB} PRIVATE -fPIC)

  ADD_TEST(${FILE} ${FILE})
ENDFOREACH(FILE)
