SET(VOXIGAME_TESTS
  testBoard
  testPiece
  testCoord
  testPatterns
  testFaces
)

FOREACH(FILE ${VOXIGAME_TESTS})

  ADD_EXECUTABLE(${FILE}
    ${FILE}.cxx ${FILE}.hxx
  )
  TARGET_LINK_LIBRARIES(${FILE}
    ${VOXIGAME_CORE_LIB} Qt::Widgets Qt::Core Qt::Xml Qt::Test
  )
  TARGET_COMPILE_OPTIONS(${VOXIGAME_CORE_LIB} PRIVATE -fPIC)

  SET_PROPERTY(TARGET ${FILE} PROPERTY AUTOMOC ON)


  ADD_TEST(${FILE} ${FILE})
ENDFOREACH(FILE)
